--- a/eventmanagement_app/pubspec.yaml
+++ b/eventmanagement_app/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.7.0
+  flutter_svg: ^2.0.14
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +62,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  
   assets:
     - assets/
     
