--- a/eventmanagement_app/android/app/build.gradle
+++ b/eventmanagement_app/android/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 android {
-    namespace = "com.example.eventmanagement_app"
+    namespace = "com.example.pkd_smart"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -22,10 +22,10 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.eventmanagement_app"
+        applicationId = "com.example.pkd_smart"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
