--- a/eventmanagement_app/pubspec.yaml
+++ b/eventmanagement_app/pubspec.yaml
@@ -2,7 +2,7 @@ name: eventmanagement_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -31,14 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.7.0
-  flutter_svg: ^2.0.14
-  carousel_slider: ^5.0.0
-  pretty_qr_code: ^3.3.0
-  mobile_scanner: ^6.0.2
+  firebase_core: ^3.8.0
+  firebase_app_check: ^0.3.1+6
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.0
 
 dev_dependencies:
   flutter_test:
@@ -50,21 +50,23 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  change_app_package_name: ^1.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-
   assets:
     - assets/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
