--- a/eventmanagement_app/pubspec.yaml
+++ b/eventmanagement_app/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_storage: ^12.3.6
   intl: ^0.17.0
   circle_nav_bar: ^2.1.1
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
