--- a/eventmanagement_app/pubspec.yaml
+++ b/eventmanagement_app/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   qr_flutter: ^4.1.0
   pdf: ^3.11.1
   printing: ^5.13.4
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
