--- a/eventmanagement_app/pubspec.yaml
+++ b/eventmanagement_app/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   printing: ^5.13.4
   webview_flutter: ^4.10.0
   google_sign_in: ^6.2.1
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
